# apple_health_source

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  Dockerfile  ERD.md  README.md  docker-compose.yml  review_notes.md
api/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
api/migrations/: 20260409000001_create_users.sql  20260409000002_create_devices.sql  20260409000003_create_sync_sessions.sql  20260409000004_create_raw_ingest.sql  20260409000005_create_health_samples.sql  20260409000006_create_workouts.sql  20260409000007_create_workout_route_points.sql  20260409000008_create_user_characteristics.sql  20260409000009_create_activity_summaries.sql  20260409000010_compression_policies.sql  20260413000001_create_nutrition_schema.sql  20260413000002_seed_nutrient_healthkit_map.sql  20260413000003_create_meal_logs.sql  20260413000004_iodine_supplemental.sql  20260416000001_drop_nutrients_name_lower.sql
api/src/: config.rs  db.rs  error.rs  main.rs
api/src/auth/: jwt.rs  middleware.rs  mod.rs
api/src/handlers/: auth_handler.rs  device_handler.rs  meals_handler.rs  mod.rs  sync_handler.rs
api/src/importer/: mod.rs
api/src/llm/: mod.rs  ollama.rs  prompt.rs
api/src/models/: health_sample.rs  meal.rs  mod.rs  user.rs
api/src/nutrition/: cache.rs  lookup.rs  mod.rs  units.rs
api/src/routes/: auth_routes.rs  device_routes.rs  health_check.rs  meals_routes.rs  mod.rs  sync_routes.rs
docs/: MIGRATION.md
ios/: project.yml
ios/HealthSync/: App.swift  Info.plist
slop/: 2026-04-09-apple-health-source-init.md  2026-04-13-voice-to-health-kit-nutrition-data.md
(+23 files in other folders)
