[package]
name = "apple-health-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Auth
jsonwebtoken = "9"

# Config
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Password hashing
argon2 = "0.5"

# Hashing
sha2 = "0.10"

# USDA importer + LLM client
csv = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
wiremock = "0.6"
